--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -13,6 +13,9 @@
 
 .image-container {
     position: relative;
+    display: flex;
+    justify-content: center;
+    height: 38%;
 }
 
 .imagebg-container {
@@ -20,7 +23,7 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 150px;
+    height: 190px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,17 +35,39 @@
 
 .header{
     display: flex;
-    width: 250px;
-    justify-content: space-between;
+    width: 100%;
+    padding-top: 17px;
+    gap: 45px;
+    margin-left: 60px;
 }
 
-.azerty{
+.hp{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.attaque{
+    display: flex;
+    justify-content: space-around;
+    /* gap: 40px;
+    margin-top: 25px; */
+}
+
+.defense{
+    display: flex;
+    justify-content: space-around;
+    /* gap: 40px;
+    margin-top: 25px; */
+}
+
+.capacite{
+    height: 30%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-top: 7px;
+    justify-content: space-evenly;
 }
+
 
 .li{
     list-style: none;
@@ -51,19 +76,36 @@
 .p{
     display: flex;
     justify-content: center;
+    padding-top: 11px;
+    font-size: 10px;
 }
 
+.h3{
+    padding-left: 25px;
+}
+
+
+
+
+
+
+/* Tous les types de pokemons */
+
 .type-fire {
-    background-color: #fddfdf;
+    background-image: url('/Pokemon-feu.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
 }
   
 .type-water {
     /* background-color: #def3fd; */
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    background-image: url('/Pokemon-eau.png');
+    /* position: absolute; */
+    /* top: 0px;
+    left: 0px; */
+    /* z-index: 1; */
+    background-image: url('/water2.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 320px;
@@ -71,5 +113,147 @@
 }
   
 .type-grass {
-    background-color: #defde0;
+    /* background-color: #defde0; */
+    background-image: url('/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-electric {
+    /* background-color: #defde0; */
+    background-image: url('/electric.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-poison {
+    /* background-color: #defde0; */
+    background-image: url('/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-normal {
+    /* background-color: #defde0; */
+    background-image: url('/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-rock {
+    /* background-color: #defde0; */
+    background-image: url('/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-ice {
+    /* background-color: #defde0; */
+    background-image: url('/water.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-fighting {
+    /* background-color: #defde0; */
+    background-image: url('/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-ground {
+    /* background-color: #defde0; */
+    background-image: url('/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-flying {
+    /* background-color: #defde0; */
+    background-image: url('/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-psychic {
+    /* background-color: #defde0; */
+    background-image: url('/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-bug {
+    /* background-color: #defde0; */
+    background-image: url('/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-ghost {
+    /* background-color: #defde0; */
+    background-image: url('/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-dragon {
+    /* background-color: #defde0; */
+    background-image: url('/dragon.png');
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-dark {
+    /* background-color: #defde0; */
+    background-image: url('/dark.png');
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-steel {
+    /* background-color: #defde0; */
+    background-image: url('/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.type-fairy {
+    /* background-color: #defde0; */
+    background-image: url('/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
 }
