--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -1,3 +1,304 @@
 .card {
-    border: solid black 1px;
+    border-radius: 18px;
+}
+
+.locked {
+    /* filter: grayscale(100%); */
+}
+
+.card-pokemon-name {
+    display: flex;
+    width: 100%;
+    padding-top: 18px;
+    gap: 45px;
+    margin-left: 80px;
+}
+
+.image-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 150px;
+    padding-top: 25px;
+}
+
+.card-thumbnail-bg {
+    background-image: url('/paysage.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+}
+
+.types {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 25px;
+    z-index: 9999999999;
+    position: relative;
+    gap: 5px;
+}
+
+.type {
+    width: 66px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.5rem;
+    text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    text-transform: uppercase;
+    list-style: none;
+}
+
+.move {
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 40px;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+.move-number {
+    width: 20px;
+}
+
+.pokedex-number {
+    padding-top: 65px;
+    padding-left: 170px;
+    font-size: 36px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+/* Card Type */
+
+.card-type-fire {
+    background-image: url('/Cards-template/Pokemon-feu.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+  
+.card-type-water {
+    background-image: url('/Cards-template/Pokemon-eau.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+  
+.card-type-grass {
+    background-image: url('/Cards-template/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-electric {
+    background-image: url('/Cards-template/electric.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-poison {
+    background-image: url('/Cards-template/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-normal {
+    background-image: url('/Cards-template/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-rock {
+    background-image: url('/Cards-template/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-ice {
+    background-image: url('/Cards-template/Pokemon-eau.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-fighting {
+    background-image: url('/Cards-template/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-ground {
+    background-image: url('/Cards-template/rock.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-flying {
+    background-image: url('/Cards-template/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-psychic {
+    background-image: url('/Cards-template/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-bug {
+    background-image: url('/Cards-template/plant.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-ghost {
+    background-image: url('/Cards-template/psychic.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-dragon {
+    background-image: url('/Cards-template/dragon.png');
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-dark {
+    background-image: url('/Cards-template/dark.png');
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-steel {
+    background-image: url('/Cards-template/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+.card-type-fairy {
+    background-image: url('/Cards-template/normal.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 320px;
+    height: 450px;
+}
+
+/* Types icons */
+
+.type-normal {
+    background-color: #aa9;
+}
+
+.type-fire {
+    background-color: #f42;
+}
+
+.type-water {
+    background-color: #39f;
+}
+
+.type-electric {
+    background-color: #fc3;
+}
+
+.type-grass {
+    background-color: #7c5;
+}
+
+.type-ice {
+    background-color: #6cf;
+}
+
+.type-fighting {
+    background-color: #b54;
+}
+
+.type-poison {
+    background-color: #a59;
+}
+
+.type-ground {
+    background-color: #db5;
+}
+
+.type-flying {
+    background-color: #89f;
+}
+
+.type-psychic {
+    background-color: #f59;
+}
+
+.type-bug {
+    background-color: #ab2;
+}
+
+.type-rock {
+    background-color: #ba6;
+}
+
+.type-ghost {
+    background-color: #66b;
+}
+
+.type-dragon {
+    background-color: #76e;
+}
+
+.type-dark {
+    background-color: #754;
+}
+
+.type-steel {
+    background-color: #aab;
+}
+
+.type-fairy {
+    background-color: #e9e;
 }
