--- a/src/app/components/Card/Card.module.css
+++ b/src/app/components/Card/Card.module.css
@@ -6,9 +6,18 @@
     height: 80vh;
 }
 
-.card{
-    /* border: 8px solid #ffe163; */
+/* .card{
     border-radius: 10px;
+} */
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+    align-items: center;
+    width: 320px; 
+    height: 450px; 
+    box-sizing: border-box; 
 }
 
 .image-container {
@@ -16,6 +25,7 @@
     display: flex;
     justify-content: center;
     height: 38%;
+    width: 100%;
 }
 
 .imagebg-container {
@@ -33,18 +43,45 @@
     z-index: -1;
 }
 
-.header{
+/* .header{
     display: flex;
     width: 100%;
     padding-top: 17px;
     gap: 45px;
     margin-left: 60px;
-}
+} */
 
-.hp{
+.header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+    width: 100%; 
+    /* padding: 10px 20px;  */
+    padding-top: 15px;
+    padding-inline: 25px;
+    padding-right: 10px;
+    box-sizing: border-box; 
+} 
+
+/* .header h3 {
+    max-width: 150px; 
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    overflow: hidden;
+} */
+
+/* .hp{
     display: flex;
     align-items: center;
     margin-left: 20px;
+} */
+
+.hp {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    justify-content: center; 
+    gap: 5px; 
 }
 
 .attaque{
@@ -76,7 +113,7 @@
 .p{
     display: flex;
     justify-content: center;
-    padding-top: 11px;
+    padding-top: 12px;
     font-size: 10px;
 }
 
@@ -105,7 +142,7 @@
     /* top: 0px;
     left: 0px; */
     /* z-index: 1; */
-    background-image: url('/water2.png');
+    background-image: url('/water.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 320px;
