--- a/src/app/Collection/style.module.css
+++ b/src/app/Collection/style.module.css
@@ -5,6 +5,11 @@
     margin-inline: 20px;
 }
 
+.collection-heading {
+    display: flex;
+    gap: 10px;
+}
+
 .collection-title {
     padding: 10px;
 }
