--- a/src/app/Boosters/style.module.css
+++ b/src/app/Boosters/style.module.css
@@ -14,6 +14,31 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.button-div button {
+    padding: 10px 20px;
+    font-family: sans-serif; 
+    font-size: 18px;
+    background-color: #e62933; 
+    color: white; 
+    border: 1px solid #e62933; 
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+
+.button-div select {
+    padding: 10px;
+    font-family: sans-serif; 
+    font-size: 16px;
+    background-color: #e62933; 
+    color: white;
+    border: 1px solid #e62933;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 200px;
 }
