--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -429,7 +429,7 @@
 }
   
 .card-type-water {
-    background-image: url('/Cards-template/Pokemon-eau.png');
+    background-image: url('/Cards-template/water.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 320px;
