--- a/src/app/Boosters/style.module.css
+++ b/src/app/Boosters/style.module.css
@@ -9,6 +9,12 @@
     padding-inline: 20px;
 }
 
+@media (max-width: 768px) {
+    .cards-area {
+       display: block;
+    }
+}
+
 .button-div {
     display: flex;
     justify-content: center;
