--- a/src/app/components/Card/card.module.css
+++ b/src/app/components/Card/card.module.css
@@ -1,16 +1,20 @@
 .card-container {
     perspective: 1000px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
 
 .card {
-    position: relative;
-    overflow: hidden; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
     transform-style: preserve-3d; 
     border-radius: 18px;
-    z-index: 1;
 }
 
 .card:hover {
@@ -43,10 +47,13 @@
     background-position: center;
     width: 100%;
     height: 190px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0px;
     left: 0px;
-    z-index: -99999999999999999999999999999999999999999999999999999;
+    z-index: -10;
 }
 
 .types {
@@ -112,6 +119,7 @@
     animation: shiny-animation 5s linear infinite;    
 }
 
+/* horreur */
 @keyframes shiny-animation {
     0% {
         background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
