--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,11 +10,16 @@ body {
 }
 
 body {
-  color: var(--foreground);
+  color: white;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  background-image: url("/background.jpg");
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  background-position: center;
 }
 
 * {
